# ubuntu-phone-native-template

./: CMakeLists.txt  README.md  README.md~  com.nativeapp.desktop.in  desktop.in  manifest.json  manifest.json.in
debian/: changelog  control  copyright  copyright~
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
